--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,8 @@ script:
   - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
   - coverage xml
   - python-codacy-coverage -r coverage.xml
+notifications:
+  email:
+    recipients:
+      - josgatfer@alum.us.es
+    on_failure: always
